--- a/MCM2021 LaTeX paper/masterbib.bib
+++ b/MCM2021 LaTeX paper/masterbib.bib
@@ -618,7 +618,7 @@ abstract = { A mathematical model that reproduces fungal proliferation and morph
 @article{Gervais1999,
 	title={Fungal Cells Turgor Pressure: Theoretical Approach and Measurement},
 	author={P. Gervais and Christophe Abadie and P. Molin},
-	journal={Journal of Scientific & Industrial Research},
+	journal={Journal of Scientific \& Industrial Research},
 	year={1999},
 	volume={58},
 	pages={671-677}
